--- a/core/src/Dockerfile
+++ b/core/src/Dockerfile
@@ -7,6 +7,7 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 ADD ./core/src /backend
+ADD ./common /backend/common
 
 EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
