--- a/core/src/requirements.txt
+++ b/core/src/requirements.txt
@@ -7,3 +7,7 @@ PyJWT==2.8.0
 bcrypt==4.1.3
 passlib==1.7.4
 python-dotenv==1.0.1
+itsdangerous==2.1.2
+aiosmtplib==4.0.0
+python-telegram-bot==21.10
+requests==2.31.0
