--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   # Databases:
   postgresql:
@@ -24,6 +22,8 @@ services:
 
   # Services
   backend:
+    extra_hosts:
+    - "host.docker.internal:host-gateway"
     build:
       dockerfile: ./core/src/Dockerfile
       context: ./
