--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.3.1",
+    "react-json-to-excel": "^1.0.8",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
